DeveloperOrg/force-app/main/default/objects/CardStatusChangeLog__c/CardStatusChangeLog__c.object-meta.xml
<CustomObject>
    <label>CardStatusChangeLog</label>
    <nameField>
        <label>CardStatusChangeLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CardStatusChangeLog</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>