DeveloperOrg/force-app/main/default/objects/CardStatusChangeLog__c/fields/card__c.field-meta.xml
<CustomField>
    <fullName>card__c</fullName>
    <label>card</label>
    <referenceTo>card__c</referenceTo>
    <relationshipLabel>CardStatusChangeLog</relationshipLabel>
    <relationshipName>CardStatusChangeLog</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>