DeveloperOrg/force-app/main/default/objects/CardStatusChangeLog__c/fields/New_status__c.field-meta.xml
<CustomField>
    <fullName>New_status__c</fullName>
    <label>New status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Waiting for Feedback</fullName>
            </value>
            <value>
                <fullName>TroubleShooting</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>